<resources>
    <string name="app_name">开易贴牌助手</string>
    <string name="scan_code_entry">扫码录入</string>
    <string name="standard_machine">部标机</string>
    <string name="loading">正在加载中…</string>
    <string name="vendor_id">厂商ID</string>
    <string name="please_enter">请输入</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="scan_code">扫码</string>
    <string name="please_entry_vendor_id">请填写厂商ID～</string>
    <string name="please_corrent_vendor_id">请输入正确的厂商ID（5位数字）～</string>
    <string name="please_save">请先保存～</string>
    <string name="need_to_dynamically_acquire_permissions">需要动态获取权限</string>
    <string name="scan_result">扫码结果</string>
    <string name="_3c">3C认证码</string>
    <string name="device_model">设备型号</string>
    <string name="device_unique_code">设备唯一码</string>
    <string name="input">录入</string>
    <string name="scan_input_hint_start">设备唯一码已存在，请</string>
    <string name="rescan">请重新扫码</string>
    <string name="click_again_to_exit">再次点击退出~</string>
    <string name="refresh_success">刷新成功～</string>
    <string name="please_check_network_is_available">请检查当前的网络否可用~</string>
    <string name="copyright">开易（北京）科技 版权所有</string>
    <string name="device_info_success">设备信息录入成功!</string>
    <string name="settings">设置</string>
    <string name="plus_speed">脉冲系数</string>
    <string name="simulation_speed">模拟速度</string>
    <string name="device_information">设备信息</string>
    <string name="imei_code">IMEI码</string>
    <string name="product_code">产品编码</string>
    <string name="product_date">生产日期</string>
    <string name="back_homepage">回到首页</string>
    <string name="next_page">下一页</string>
    <string name="scanning">继续扫码</string>
    <string name="previous_page">上一页</string>
</resources>
