<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.QRCodeActivity">

    <TextView
        android:layout_width="match_parent"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/device_information"
        android:gravity="center"
        android:paddingTop="16dp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_home_pager"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_imie_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/imei_code" />

        <TextView
            android:id="@+id/tv_product_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/device_unique_code" />

        <TextView
            android:id="@+id/tv_date_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_date" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="@android:color/holo_green_dark"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/fl_contain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_homepage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/hollow_circle"
            android:gravity="center"
            android:text="@string/back_homepage"
            android:visibility="visible"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_next"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/solid_round"
            android:gravity="center"
            android:text="@string/next_page"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>