<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activity.ScanResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_scan_result_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:src="@mipmap/arrow_left_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/scan_result"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3c"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_3c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/input_style"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_model"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_device_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/input_style"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_unique_code"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_device_result_unique_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/input_style"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vendor_id"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_vendor_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/input_style"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:visibility="visible"
            android:layout_width="@dimen/dp_83"
            android:layout_height="@dimen/dp_83"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_60"
            android:background="@mipmap/entry_success_icon"
            android:id="@+id/tv_success_image"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_19" />

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="@dimen/dp_83"
            android:layout_height="@dimen/dp_83"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_60"
            android:gravity="center"
            android:background="@drawable/solid_round"
            android:text="@string/input"
            android:visibility="visible"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_19" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_success_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/device_info_success"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:visibility="gone"
        android:textColor="@color/colorPrimaryFont"
        android:textSize="@dimen/sp_19" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/ll_scan_result_hint"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:paddingEnd="@dimen/dp_16"
            android:src="@mipmap/entry_fail_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_scan_result_hint"
            android:text="@string/scan_input_hint_start"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/sp_16"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_rescan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescan"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:textColor="@color/colorCameraFont"/>
    </LinearLayout>

</LinearLayout>