<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tv_home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/white"
        android:padding="@dimen/dp_16"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryFont"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:padding="@dimen/dp_16"
        android:id="@+id/iv_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/settings"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/dp_15"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="54dp"
        android:paddingBottom="54dp"
        android:paddingEnd="@dimen/dp_16"
        android:id="@+id/tv_standard_machine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_page"
        android:drawableRight="@mipmap/arrow_right_icon"
        android:gravity="center"
        android:text="@string/standard_machine"
        android:background="@android:color/white"
        android:textColor="@color/colorPrimaryFont"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/sp_13"
        android:layout_marginBottom="@dimen/dp_40"
        android:textColor="@color/colorCopyright"
        android:text="@string/copyright"/>

</androidx.constraintlayout.widget.ConstraintLayout>