<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:src="@mipmap/arrow_left_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dp_18"
            android:paddingBottom="16dp"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_bg"
        app:layout_constraintTop_toBottomOf="@+id/ll_title" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_plus_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="@dimen/dp_16"
                    android:text="@string/plus_speed"
                    android:textColor="@color/colorPrimaryFont"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_plus_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_16"
                    android:src="@drawable/switch_close_icon" />
            </LinearLayout>

            <View
                android:id="@+id/view_plus_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="@color/line_bg"
                app:layout_constraintTop_toBottomOf="@+id/ll_plus_speed" />

            <TextView
                android:id="@+id/et_plus_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="right"
                android:hint="输入频率设置60HZ"
                android:padding="@dimen/dp_16"
                android:textColor="@color/colorPrimaryFont"
                android:textSize="@dimen/sp_16"
                app:layout_constraintTop_toBottomOf="@+id/view_plus_line" />

            <LinearLayout
                android:id="@+id/ll_simulation_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/et_plus_speed">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="@dimen/dp_16"
                    android:text="@string/simulation_speed"
                    android:textColor="@color/colorPrimaryFont"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_simulation_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_16"
                    android:src="@drawable/switch_close_icon" />
            </LinearLayout>
        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/solid_round"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>